maven dependency for tests

--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>algorithm1</groupId>
-    <artifactId>algorithm1</artifactId>
+    <groupId>coursera1</groupId>
+    <artifactId>coursera1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Coursera 1 Algorithms</name>
     <description>This project contains all problems given in Coursera's Desgin and Algorithms 1 course.</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.9.10</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
